DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -368,11 +368,11 @@
                     <th>A Side</th>
                     <th>intermediary</th>
                     <th>Z Side</th>
-                    <th>How much better?</th>
-                    <th>InDirect OWL</th>
-                    <th>Direct OWL</th>
-                    <th>segment1</th>
-                    <th>segment2</th>
+                    <th>How much better? (absolute)</th>
+                    <th>InDirect One-Way Latency (raw)</th>
+                    <th>Direct One-Way Latency (raw)</th>
+                    <th>segment1 (raw)</th>
+                    <th>segment2 (raw)</th>
                 </tr>
             </thead>
             <tbody>
