--- a/views/index.html
+++ b/views/index.html
@@ -213,9 +213,9 @@
                             //WBNWBNWBNWBNWBN
                             
                             //var balance = ((pulse.relayCount*1500 + pulse.inPulses*1500) / (1000000 * 1000)) * .5;  //Assume 1 relayed pkts/sec count and measurement inPulses
-                            var balance = ((pulse.relayCount*1500 + pulse.inPulses*1500) * 0.0000001275);  //Earn for relayed and measured pkts
+                            var balance = ((pulse.relayCount + pulse.inPulses) * 0.0000001275);  //Earn for relayed and measured pkts
                             
-                            measurementCosts += (pulse.inPulses*1500 * 0.0000001275);  //measurementCosts are the costs for node to send pulses
+                            measurementCosts += (pulse.inPulses * 0.0000001275);  //measurementCosts are the costs for node to send pulses
                             balance = parseFloat(balance.toFixed(6));
 
                             $("."+pulse.geo+"_balance").text("$" + balance);  //TODO : Align left for this text field
