--- a/views/index.html
+++ b/views/index.html
@@ -458,7 +458,7 @@
                 <td class="<%= classNameGeoRtt %>"><a class="BUSY" target="_blank" href="<%= graphUrl %>" ><%= pulseEntry.rtt %></a> ms</td>
                                 
                 <% let classNameGeoWgRtt = pulseEntry.geo + "_wgrtt"; %>
-                <td class="<%= classNameGeoWgRtt %>"><a class="BUSY" target="_blank" href="<%= graphUrl %>" ><%= pulseEntry.wgrtt %></a> ms</td>
+                <td class="<%= classNameGeoWgRtt %>"><a class="BOLD" target="_blank" href="<%= graphUrl %>" ><%= pulseEntry.wgrtt %></a> ms</td>
 
                 <% let classNameGeoRelayCount = pulseEntry.geo + "_relayCount"; %>
                 <td class="<%= classNameGeoRelayCount %>"> <%= pulseEntry.relayCount %>ms</td>
