--- a/views/index.html
+++ b/views/index.html
@@ -279,7 +279,7 @@
 </head>
 <body>    
     <!--<h1><%= me.geo %> PulseGroup Encrypted Mesh WAN http://<%= me.ipaddr %>:<%= me.port %> <%= config.VERSION %> ALPHA Test 1.0</h1> -->
-    <h1><%= me.geo %> PulseGroup Encrypted Mesh WAN http://<%= me.ipaddr %>:<%= me.port %> <%= config.VERSION %> ALPHA Test 1.0</h1>
+    <h1><%= me.geo %> http://<%= me.ipaddr %>:<%= me.port %> ALPHA <%= config.VERSION %> </h1>
 
     <% var d = new Date(); %>
     <% function now() { var dateNow = new Date(); return dateNow.getTime(); } %>
@@ -517,7 +517,7 @@
             </tr>
         <% } %>
             <tr>
-                <td>Node Earnings</td>
+                <td>___ Node Earnings</td>
                 <td></td>
                 <td></td>
                 <td></td>
