DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -226,7 +226,7 @@
                     }
 
                     measurementCosts = parseFloat(measurementCosts.toFixed(6));
-                    $(".total_earn").text("PulseGroupBalance: $"+measurementCosts);
+                    $(".total_earn").text("measurementCosts: $"+measurementCosts);
                 //}
 
             }).fail(function() {
