DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -301,7 +301,7 @@
         <table id="matrix" >
             <thead>
             <tr>
-            <th><%= pulseGroup.groupName %> OWL Matrix</th>
+            <th><%= pulseGroup.groupName %> OWL Matrix (raw)</th>
 
         <!-- print OWL headers -->
         <% for (let col in pulseGroup.pulses) { %>
