DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -286,7 +286,7 @@
     <% var timeStr = d.toString().split(' ')[4]; %>
     <% var g=process.env.GENESISNODELIST.split(","); %>
 
-    <p id="dateTime">*Refresh: <%= timeStr %> </p>
+    <p id="dateTime">*Refresh: <%= timeStr %> Your Docker: <a href="http://localhost:65013/"> http://localhost:65013/ </a></p>
 
 
     
