--- a/views/index.html
+++ b/views/index.html
@@ -297,7 +297,11 @@
         <h2> <%= pulseGroup.groupName %>  POLLFREQ <%= pulseGroup.cycleTime %> seconds</h2>
 
         <!-- show OWL Matrix table -->
-        <br><h2><%= pulseGroup.groupName %> pulseGroup: <%= pulseGroup.groupName %></h2>
+        <% if (pulseGroup.owner==me.geo) %>
+            <br><h2><%= pulseGroup.groupName %> pulseGroup: <%= pulseGroup.groupName %></h2>
+        <% else %>
+            <br><h2><%= pulseGroup.groupName %> pulseGroup: <%= pulseGroup.groupName %></h2>
+
         <table id="matrix" >
             <thead>
             <tr>
