DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -542,6 +542,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td class="total_earn"><%= pulseGroup.groupName %> Simuluted Net earnings $ <%= total.toFixed(6).replace(/\d(?=(\d{3})+\.)/g, '$&,') %></td>
             <!--  <td class="total_earn"><%= pulseGroup.groupName %> Earnings $ <%= total.toFixed(6) %></td>  -->
             </tr>
         </tbody>
