DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -118,7 +118,7 @@
 
 
 
-                            let showBetterPath = "http://127.0.0.1:8081/showbetterpath?aSide=" + extraordinaryPath.aSide + "&aSideIP=" + extraordinaryPath.aSideIP + "&aSidePort="  + extraordinaryPath.aSidePort + "&zSide="  + extraordinaryPath.zSide + "&zSideIP=" + extraordinaryPath.zSideIP + "zSidePort="  + extraordinaryPath.zSidePort + "&intermediary="  + extraordinaryPath.intermediary + "&intermediaryIP=" + extraordinaryPath.intermediaryIP + "&intermediaryPort="  + extraordinaryPath.intermediaryPort;
+                            let showBetterPath = "http://127.0.0.1:8081/showbetterpath?aSide=" + extraordinaryPath.aSide + "&aSideIP=" + extraordinaryPath.aSideIP + "&aSidePort="  + extraordinaryPath.aSidePort + "&zSide="  + extraordinaryPath.zSide + "&zSideIP=" + extraordinaryPath.zSideIP + "&zSidePort="  + extraordinaryPath.zSidePort + "&intermediary="  + extraordinaryPath.intermediary + "&intermediaryIP=" + extraordinaryPath.intermediaryIP + "&intermediaryPort="  + extraordinaryPath.intermediaryPort;
                             
 
 
