--- a/views/index.html
+++ b/views/index.html
@@ -586,7 +586,7 @@
             <% for (var a in pulseGroup.mintTable) { %>
                 <% var srcMintEntry = pulseGroup.mintTable[a]; %>
                 
-                <% if (srcMintEntry != null) { %>                
+                <% if (srcMintEntry != null && ! (( a == 0 )  && (srcMintEntry.geo == pulseGroup.groupOwner ) ) { %>                
                     <% var mintClass = ""; %>
                     
                     <% if (srcMintEntry.mint == 0) { %>
