--- a/views/index.html
+++ b/views/index.html
@@ -217,10 +217,9 @@
                             $("."+pulse.geo+"_pktDrops").text(pulse.seq-pulse.inPulses);
                             //var balance = (Math.min(pulse.inPulses*1500, pulse.outPulses*1500) / (1000000 * 1000)) * .5;
                             
-                            //WBNWBNWBNWBNWBN
+                            //WBNWBNWBNWBNWBN  $0.0000001275   <--- price per packet (1500 bytes) at 8.5 cents/GB   *5=42 cents profit per GB for better path
                             
-                            //var balance = ((pulse.relayCount*1500 + pulse.inPulses*1500) / (1000000 * 1000)) * .5;  //Assume 1 relayed pkts/sec count and measurement inPulses
-                            var balance = ((pulse.relayCount  * 5 * 0.0000001275) + (pulse.inPulses*0.0000001275));  //Earn 50 cents/GB - 8.5 cents cost = 41.5cents/GB per relayed +  measured pkts
+                            var balance = ((pulse.relayCount  * 10 * 0.0000001275) + (pulse.inPulses*0.0000001275));  //Earn 10x for relaying cents/GB - 80.5 cents cost = 41.5cents/GB per relayed +  measured pkts
                             
                             measurementCosts += (pulse.inPulses * 0.0000001275);  //measurementCosts are the costs for node to send pulses
                             balance = parseFloat(balance.toFixed(6));
@@ -423,7 +422,7 @@
             </tr>
             </thead>
             <tbody>
-                <p>**simulating relaying 10 pkts whenever better path exists (@50cents/GB relayed - 8.5cents/GB cost=41.5cents/GB)</p>
+                <p>**simulating relaying 10 pkts whenever better path exists ( @ 10x premium over 8.5cents/GB relayed - 80.5cents/GB cost=8.5cents/GB)</p>
         <% var total = 0; %> <!--Add up total balance of all pulses -->
         <% for (let a in pulseGroup.pulses) { %>
             
