--- a/views/index.html
+++ b/views/index.html
@@ -521,11 +521,18 @@
                 <% let classNameGeoVersion = pulseEntry.geo + "_version"; %>
                 <td class="<%= classNameGeoVersion %>"><%= pulseEntry.version %></td>
                 
+
+
                 <% let balance = pulseEntry.inPulses*0.0000001275 + pulseEntry.relayCount*10*0.0000001275 %> <!-- 1500 bytes at 8 cents per GB -->
                 <% total = total + balance; %>
                 <% let classNameGeoBalance = pulseEntry.geo + "_balance"; %>
-                <td class="<%= classNameGeoBalance %>">$ <%= balance.toFixed(6).replace(/\d(?=(\d{3})+\.)/g, '$&,') %></td>
-                <!-- <td><%= pulseEntry.lastMsg %></td> -->
+                <td class="<%= classNameGeoBalance %>">$ <%= balance.toFixed(6) %></td>
+                
+                
+                
+                
+                <!-- <td><%= pulseEntry.lastMsg %></td>                    <td class="<%= classNameGeoBalance %>">$ <%= balance.toFixed(6).replace(/\d(?=(\d{3})+\.)/g, '$&,') %></td>
+   -->
             <% } %>
             </tr>
         <% } %>
