--- a/views/index.html
+++ b/views/index.html
@@ -526,7 +526,7 @@
                 <% let balance = 100*pulseEntry.inPulses*0.0000001275 + 100*10*pulseEntry.relayCount*10*0.0000001275 %> <!-- measured in cents 10 packets priced 10 times higher than measurement packets 1500 bytes at 8 cents per GB -->
                 <% total = total + balance; %>
                 <% let classNameGeoBalance = pulseEntry.geo + "_balance"; %>
-                <td class="<%= classNameGeoBalance %>">$ <%= balance.toFixed(6) %></td>
+                <td class="<%= classNameGeoBalance %>">&#xa2; <%= balance.toFixed(6) %></td>
                 
                 
                 
