--- a/views/index.html
+++ b/views/index.html
@@ -304,7 +304,7 @@
     <!-- INSTRUMENTATION externalize pulseGroup matrix -->
     
     <% for (var p in myPulseGroups) { %>
-        <% var pulseGroup=myPulseGroups[p]; console.log("pulseGroup="); %>
+        <% var pulseGroup=myPulseGroups[p]; console.log("pulseGroup="+pulseGroup); %>
 
         <h1> Pulse Group: <%= pulseGroup.groupName %>  POLLFREQ <%= pulseGroup.cycleTime %> seconds</h1>
 
