--- a/views/index.html
+++ b/views/index.html
@@ -306,7 +306,7 @@
     <!-- INSTRUMENTATION externalize pulseGroup matrix -->
     
     <% for (var p in myPulseGroups) { %>
-        <% var pulseGroup=myPulseGroups[p];  console.log("PULSEGROUPS"); %>
+        <% var pulseGroup=myPulseGroups[p];   %>
 
         <h1> Pulse Group: <%= pulseGroup.groupName %>  POLLFREQ <%= pulseGroup.cycleTime %> seconds</h1>
 
