--- a/views/index.html
+++ b/views/index.html
@@ -34,7 +34,7 @@
             $.getJSON(url, function(pulseGroup) {
                 $(document.body).css( "background", "white" );
 
-                console.log("********************** pulseGroups="+JSON.stringify(pulseGroups,null,2));
+                console.log("********************** pulseGroup="+JSON.stringify(pulseGroup,null,2));
                 //for (var n in config) {
                 //    var pulseGroup = config[n];
                    
