--- a/views/index.html
+++ b/views/index.html
@@ -36,6 +36,8 @@
 
                 console.log("********************** pulseGroups="+JSON.stringify(pulseGroups,null,2));
                 for (var pulseGroup in pulseGroups ) {
+                    console.log("********************** pulseGroup="+pulseGroup);
+
                     //var pulseGroup = config[n];
                    
                     // Fill the OWL matrix using only the owls - TODO: remove matrix ugliness.
