--- a/views/index.html
+++ b/views/index.html
@@ -34,9 +34,9 @@
             $.getJSON(url, function(pulseGroups) {
                 $(document.body).css( "background", "white" );
 
-                console.log("********************** pulseGroups="+JSON.stringify(pulseGroups,null,2));
+                console.log("** = - = - = - = - ******************** pulseGroups="+JSON.stringify(pulseGroups,null,2));
                 for (var pulseGroup in pulseGroups ) {
-                    console.log("********************** pulseGroup="+pulseGroup);
+                    console.log("---------------------------- - - - - - - -> pulseGroup="+pulseGroup);
 
                     //var pulseGroup = config[n];
                    
