--- a/views/index.html
+++ b/views/index.html
@@ -36,7 +36,7 @@
 
                 console.log("** = - = - = - = - ******************** pulseGroups="+JSON.stringify(pulseGroups,null,2));
                 for (var pulseGroup in pulseGroups ) {
-                    console.log("---------------------------- - - - - - - -> pulseGroup="+pulseGroup);
+                    console.log("---------------------------- - - - - - - -> pulseGroup     ");
 
                     //var pulseGroup = config[n];
                    
