--- a/views/index.html
+++ b/views/index.html
@@ -45,7 +45,7 @@
                     // Fill the OWL matrix using only the owls - TODO: remove matrix ugliness.
                     for (var src in pulseGroup.pulses) {
                         var pulseEntry=pulseGroup.pulses[src];
-                        console.log("index.html: =================== pulseEntry="+JSON.stringify(pulseEntry,null,2));
+                        //console.log("index.html: =================== pulseEntry="+JSON.stringify(pulseEntry,null,2));
 
                         if (pulseEntry==null) {
                             console.log("ERROR: pulseEntry==null");
