--- a/views/index.html
+++ b/views/index.html
@@ -167,8 +167,8 @@
                     // console.log(" pulseGroup.nodeCount="+pulseGroup.nodeCount+" nodeCountLastTime="+nodeCountLastTime );
                     if ( pulseGroup.nodeCount >= 1 ) {
                         if (nodeCountLastTime!=0) {
-                            if ( nodeCountLastTime != pulseGroup.nodeCount ) {  //immediately show changes so screen reflects reality
-                            //if (( nodeCountLastTime > pulseGroup.nodeCount+1) || (nodeCountLastTime < pulseGroup.nodeCount-1 )) {
+                            //if ( nodeCountLastTime != pulseGroup.nodeCount ) {  //immediately show changes so screen reflects reality
+                            if (( nodeCountLastTime > pulseGroup.nodeCount+1) || (nodeCountLastTime < pulseGroup.nodeCount-1 )) {
                                     console.log("index.html: RELOAD(): pulseGroup.nodeCount="+pulseGroup.nodeCount+" nodeCountLastTime="+nodeCountLastTime );
                                     location.reload();
                             }
