--- a/views/index.html
+++ b/views/index.html
@@ -41,7 +41,7 @@
                     var pulseGroup=pulseGroups[p];
 
                     //var pulseGroup = config[n];
-                    console.log("pulseGroups="+JSON.stringify(pulseGroups,null,2) );
+                    //console.log("index.html: pulseGroups="+JSON.stringify(pulseGroups,null,2) );
                     // Fill the OWL matrix using only the owls - TODO: remove matrix ugliness.
                     for (var src in pulseGroup.pulses) {
                         var pulseEntry=pulseGroup.pulses[src];
